refactor(测试计划): 优化测试计划关联接口的模块树